--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/images/blue jade_logo.png" type="image/gif" sizes="16x16">
 
-    <title>Bluejade Solutions</title>
+    <title>Blue Jade Solutions</title>
 <!--
 
 -->
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h1>We Are BLUEJADE <em>About Us</em></h1>
+                        <h1>We Are BLUE JADE <em>About Us</em></h1>
                         <p>We are a team of experts, offering most advanced and<br>latest technologies in safety & security sector. we offers design and installtion of variouse security solutions like,<br>Video Surveillance System,Access Control System,Fire Alarm System,Public Address System,Audio Video Systems, Automation..Etc
                         </p> 
                         <a href="https://wa.me/message/3RHKP43UJNUVN1" class="main-button-slider">Get a quote</a>
@@ -351,7 +351,7 @@
                     </div>
                     <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
-                        <h2>Bluejade <em>Solutions</em></h2>
+                        <h2>Blue Jade <em>Solutions</em></h2>
                         <p>Al Karama- UAE <br>Dubai-33388<br>+971 582799692<br>+971 551987915<br>bluejadebss@outlook.com</p>
                         <ul class="social">
                             <li><a href="https://www.facebook.com/bluejadesolutions"><i class="fa fa-facebook"></i></a></li>
