--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="assets/images/blue jade_logo.png" alt="">
+                            <img src="assets/images/blue jade_logo.png" alt="" style="height:80px;">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
