--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/images/blue jade_logo.png" type="image/gif" sizes="16x16">
 
-    <title>Blue Jade Solutions</title>
+    <title>Bluejade Solutions</title>
 <!--
 
 -->
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h1>We Are BLUE JADE <em>About Us</em></h1>
+                        <h1>We Are BLUEJADE <em>About Us</em></h1>
                         <p>We are a team of experts, offering most advanced and<br>latest technologies in safety & security sector. we offers design and installtion of variouse security solutions like,<br>Video Surveillance System,Access Control System,Fire Alarm System,Public Address System,Audio Video Systems, Automation..Etc
                         </p> 
                         <a href="https://wa.me/message/3RHKP43UJNUVN1" class="main-button-slider">Get a quote</a>
@@ -101,8 +101,7 @@
                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <h2>01</h2>
-                            <img src="assets/images/features-icon-3.png" alt="">
+                            <img src="assets/images/features-icon-1.jpg" alt="">
                             <h4>Computer & Accessories</h4>
                             <p>Bluejade have Broader selection of computer & Accessories products, Superior buying experience, On-time delivery of products & Quick resolution of any concerns.</p>
                         </div>
@@ -112,8 +111,7 @@
                     data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <h2>02</h2>
-                            <img src="assets/images/features-icon-3.png" alt="">
+                            <img src="assets/images/features-icon-2.jpg" alt="">
                             <h4>Data & Network Systems</h4>
                             <p>Bluejade provides complete data & Computer networking solutions that interconnected computing devices that can exchange data and share resources with each other</p>
                         </div>
@@ -123,8 +121,7 @@
                     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <h2>03</h2>
-                            <img src="assets/images/features-icon-3.png" alt="">
+                            <img src="assets/images/features-icon-3.jpg" alt="">
                             <h4>Video Surveillance System</h4>
                             <p>Bluejade Provides Effective security starts with intelligent site design and precise camera coverage. Our experts set you up for success.</p>
                         </div>
@@ -134,8 +131,7 @@
                 data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                 <div class="features-item">
                     <div class="features-icon">
-                        <h2>04</h2>
-                        <img src="assets/images/features-icon-3.png" alt="">
+                        <img src="assets/images/features-icon-4.jpg" alt="">
                         <h4>Access control System</h4>
                         <p>Our access control solutions enable building owners, tenants and visitors to ‘go with the flow’. Our integrated technology offers a high level of accessibility and security in diffrent sectors.</p>
                     </div>
@@ -145,8 +141,7 @@
                 data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                 <div class="features-item">
                     <div class="features-icon">
-                        <h2>05</h2>
-                        <img src="assets/images/features-icon-3.png" alt="">
+                        <img src="assets/images/features-icon-5.jpg" alt="">
                         <h4>Public Address System</h4>
                         <p>Bluejade Solutions provide a complete range of solutions of Public Address systems (PA systems) which can be used for announcements and alerts in number of situations for diffrent organisations.</p>
                     </div>
@@ -156,8 +151,7 @@
             data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
             <div class="features-item">
                 <div class="features-icon">
-                    <h2>06</h2>
-                    <img src="assets/images/features-icon-3.png" alt="">
+                    <img src="assets/images/features-icon-6.jpg" alt="">
                     <h4>Fire Alarm System</h4>
                     <p>Fire alarm and detection systems. We ensure smart fire safety for buildings and challenging applications. Look for the fire detection solution that fits all your needs and ensure smart safety for your building.</p>
                 </div>
@@ -168,8 +162,7 @@
         data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
         <div class="features-item">
             <div class="features-icon">
-                <h2>07</h2>
-                <img src="assets/images/features-icon-3.png" alt="">
+                <img src="assets/images/features-icon-7.jpg" alt="">
                 <h4>Audio Video Systems</h4>
                 <p>We are a company of professionals in sales, marketing & support. We specialise in design, supply, installation, service & maintenance of a complete range of advanced and sophisticated Audio Visual Systems.</p>
             </div>
@@ -179,8 +172,7 @@
         data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
         <div class="features-item">
             <div class="features-icon">
-                <h2>08</h2>
-                <img src="assets/images/features-icon-3.png" alt="">
+                <img src="assets/images/features-icon-8.jpg" alt="">
                 <h4>Software Support</h4>
                 <p>We provide basic and advanced software support services. Our technicians have experience maintaining the software after the project completion & supporting software products.</p>
             </div>
@@ -190,8 +182,7 @@
     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
     <div class="features-item">
         <div class="features-icon">
-            <h2>09</h2>
-            <img src="assets/images/features-icon-3.png" alt="">
+            <img src="assets/images/features-icon-9.jpg" alt="">
             <h4>Automations</h4>
             <p>Our focus is on designing and delivering the most appropriate solutions for a wide range of automotion needs in diffrent sectors & it is help to accelerate customers business.</p>
         </div>
@@ -351,7 +342,7 @@
                     </div>
                     <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
-                        <h2>Blue Jade <em>Solutions</em></h2>
+                        <h2>Bluejade <em>Solutions</em></h2>
                         <p>Al Karama- UAE <br>Dubai-33388<br>+971 582799692<br>+971 551987915<br>bluejadebss@outlook.com</p>
                         <ul class="social">
                             <li><a href="https://www.facebook.com/bluejadesolutions"><i class="fa fa-facebook"></i></a></li>
