--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                         <h1>We Are BLUEJADE <em>About Us</em></h1>
-                        <p>We are a team of experts, offering most advanced and<br>latest technologies in safety & security sector. we offers design and installtion of variouse security solutions like,<br>Video Surveillance System,Access Control System,Fire Alarm System,Public Address System,Audio Video Systems, Automation..Etc
+                        <p>We are a group of professionals who provide the most cutting-edge and modern technologies in the safety and security industry. We provide the design and installation of numerous security measures, including
+                           Video Surveillance System,Access Control System,Fire Alarm System,Public Address System,Audio Video Systems, Automation..Etc
                         </p> 
                         <a href="https://wa.me/message/3RHKP43UJNUVN1" class="main-button-slider">Get a quote</a>
                     </div>
@@ -103,7 +104,7 @@
                         <div class="features-icon">
                             <img src="assets/images/features-icon-1.jpg" alt="">
                             <h4>Computer & Accessories</h4>
-                            <p>Bluejade have Broader selection of computer & Accessories products, Superior buying experience, On-time delivery of products & Quick resolution of any concerns.</p>
+                            <p>Bluejade offers a wider variety of computer and accessory products, a superior shopping experience, prompt product delivery, and effective problem-solving.</p>
                         </div>
                     </div>
                 </div>
@@ -113,7 +114,7 @@
                         <div class="features-icon">
                             <img src="assets/images/features-icon-2.jpg" alt="">
                             <h4>Data & Network Systems</h4>
-                            <p>Bluejade provides complete data & Computer networking solutions that interconnected computing devices that can exchange data and share resources with each other</p>
+                            <p>Bluejade offers comprehensive data and computer networking solutions that connect computing devices so they can share resources and exchange data.</p>
                         </div>
                     </div>
                 </div>
@@ -123,7 +124,7 @@
                         <div class="features-icon">
                             <img src="assets/images/features-icon-3.jpg" alt="">
                             <h4>Video Surveillance System</h4>
-                            <p>Bluejade Provides Effective security starts with intelligent site design and precise camera coverage. Our experts set you up for success.</p>
+                            <p>Bluejade Offers An intelligent site design and exact camera coverage are the foundation of effective security. Your success is ensured by our specialists.</p>
                         </div>
                     </div>
                 </div>
@@ -153,7 +154,7 @@
                 <div class="features-icon">
                     <img src="assets/images/features-icon-6.jpg" alt="">
                     <h4>Fire Alarm System</h4>
-                    <p>Fire alarm and detection systems. We ensure smart fire safety for buildings and challenging applications. Look for the fire detection solution that fits all your needs and ensure smart safety for your building.</p>
+                    <p>Systems for detecting and alerting fires. For complex applications as well as buildings, we provide smart fire safety. Choose a fire detection solution that satisfies all of your requirements to ensure smart building safety.</p>
                 </div>
             </div>
         </div>
@@ -164,7 +165,7 @@
             <div class="features-icon">
                 <img src="assets/images/features-icon-7.jpg" alt="">
                 <h4>Audio Video Systems</h4>
-                <p>We are a company of professionals in sales, marketing & support. We specialise in design, supply, installation, service & maintenance of a complete range of advanced and sophisticated Audio Visual Systems.</p>
+                <p>We are a team of sales, marketing, and support experts. We specialize in the design, provision, installation, servicing, and upkeep of a full selection of complex and cutting-edge audio visual systems.</p>
             </div>
         </div>
     </div>
@@ -174,7 +175,7 @@
             <div class="features-icon">
                 <img src="assets/images/features-icon-8.jpg" alt="">
                 <h4>Software Support</h4>
-                <p>We provide basic and advanced software support services. Our technicians have experience maintaining the software after the project completion & supporting software products.</p>
+                <p>We offer both fundamental and cutting-edge software support services. After a project is finished, our specialists have experience supporting software products and maintaining the program.</p>
             </div>
         </div>
     </div>
@@ -184,7 +185,7 @@
         <div class="features-icon">
             <img src="assets/images/features-icon-9.jpg" alt="">
             <h4>Automations</h4>
-            <p>Our focus is on designing and delivering the most appropriate solutions for a wide range of automotion needs in diffrent sectors & it is help to accelerate customers business.</p>
+            <p>Our priority is to develop and provide the best solutions for a variety of automotion demands across various industries, which helps clients' businesses advance.</p>
         </div>
     </div>
 </div>
@@ -211,21 +212,21 @@
                             <img src="assets/images/about-icon-01.png" alt="">
                             <div class="text">
                                 <h4>Quality Serivces</h4>
-                                <p>We guaranteed high quality for all our products and services.</p>
+                                <p>High quality was assured for all of our goods and services.</p>
                             </div>
                         </li>
                         <li data-scroll-reveal="enter right move 30px over 0.6s after 0.5s">
                             <img src="assets/images/about-icon-02.png" alt="">
                             <div class="text">
                                 <h4>Efficient Designing & Engineering Team</h4>
-                                <p>Our qualified team guaranteed for the best ouput in the industry. </p>
+                                <p>Our qualified team ensured for the best ouput in the sector. </p>
                             </div>
                         </li>
                         <li data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
                             <img src="assets/images/about-icon-03.png" alt="">
                             <div class="text">
                                 <h4>Low Cost & On Time Delivery</h4>
-                                <p>Our efficient team guaranteed for on time delivery with lowest cost in the industry. </p>
+                                <p>Our capable crew promised on-time delivery at the best price in the sector.</p>
                             </div>
                         </li>
                     </ul>
@@ -252,47 +253,68 @@
                     <div class="owl-carousel owl-theme">
                         <div class="item service-item">
                             <div class="testimonial-content">
-                                <ul class="stars">
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                </ul>
-                                <h4>Coming Soon</h4>
+                                <h4>
+                                    Client <br>
+                                    *****<br>
+                                    Dubai College<br>
+                                    <br>
+                                    Scope Of Work<br>
+                                    *****<br>
+                                    SACS & VSS
+                                    <br>
+                                    <br>
+                                    <a href="" class="main-button-slider">Photo Gallery</a>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="item service-item">
+                            <div class="testimonial-content">
+                                <h4>
+                                    Client <br>
+                                    *****<br>
+                                    Delta International<br>
+                                    <br>
+                                    Scope Of Work<br>
+                                    *****<br>
+                                    SACS & VSS
+                                    <br>
+                                    <br>
+                                    <a href="" class="main-button-slider">Photo Gallery</a>
+                                </h4>
                             </div>
                         </div>
                         <div class="item service-item">
                             <div class="testimonial-content">
                                 <ul class="stars">
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>coming Soon</h4>
+                                <h4>
+                                    Client <br>
+                                    *****<br>
+                                    PAB Auto Maintenance<br>
+                                    <br>
+                                    Scope Of Work<br>
+                                    *****<br>
+                                    SACS & VSS
+                                    <br>
+                                    <br>
+                                    <a href="" class="main-button-slider">Photo Gallery</a>
+                                </h4>
                             </div>
                         </div>
                         <div class="item service-item">
                             <div class="testimonial-content">
-                                <ul class="stars">
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                </ul>
-                                <h4>Coming Soon</h4>
-                            </div>
-                        </div>
-                        <div class="item service-item">
-                            <div class="testimonial-content">
-                                <ul class="stars">
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                </ul>
-                                <h4>Coming Soon</h4>
+                                <h4>
+                                    Client <br>
+                                    *****<br>
+                                    Al Shafar Apartments<br>
+                                    <br>
+                                    Scope Of Work<br>
+                                    *****<br>
+                                    SACS & VSS
+                                    <br>
+                                    <br>
+                                    <a href="" class="main-button-slider">Photo Gallery</a>
+                                </h4>
                         </div>
                     </div>
                 </div>
@@ -343,11 +365,11 @@
                     <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
                         <h2>Bluejade <em>Solutions</em></h2>
-                        <p>Al Karama- UAE <br>Dubai-33388<br>+971 526535448<br>+971 551987915<br>bluejadebss@outlook.com</p>
+                        <p>Al Karama- UAE <br>Dubai-33388<br>+971 582799692<br>+971 551987915<br>bluejadebss@outlook.com</p>
                         <ul class="social">
                             <li><a href="https://www.facebook.com/bluejadesolutions"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://www.instagram.com/bluejadesolutions?r=nametag"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/blue-jade-solutions/"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/blue-jade-solutions-922b3a251"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
